# TailSeeker

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  environment.yml  main.py  pyproject.toml  requirements-colab.txt  requirements.txt
.github/workflows/: ci.yml
config/: default.yaml  edm_ablation.yaml
config/experiment/: ablation_tilt.yaml
notebooks/: _patch_nb.py  admet_ablation.ipynb  edm_ablation.ipynb  edm_ablation2.ipynb  edm_tail_eval.ipynb
scripts/: build_qm9_npz.py  demo_losses.py  plot_ablation.py  run_edm_ablation.py  train.py
src/: utils.py
src/data/: qm9.py
src/diffusion/: __init__.py  forward_process.py  noise_schedule.py  reverse_process.py
src/eval/: evaluator.py
src/generation/: __init__.py  decode.py
src/losses/: __init__.py  base.py  ddpm_simple.py  hierarchical_loss.py  reward_weighted_loss.py  tilted_score_matching.py
src/metrics/: __init__.py  distributional.py  molecular.py  tail.py  training.py
src/models/: __init__.py  base.py  ddpm_unet.py  edm_adapter.py
src/training/: trainer.py
tailseeker/: __init__.py  run.py
tailseeker/bins/: __init__.py
tailseeker/data/: __init__.py  utils.py
tailseeker/data_modules/: __init__.py  tailseeker_datamodule.py
tailseeker/lightning/: __init__.py  loss.py  trainer.py
tailseeker/models/: __init__.py  model.py  nn.py
tailseeker/utils/: __init__.py  metrics.py  utils.py  visualizations.py
tests/: conftest.py  test_generation.py  test_gradcheck.py  test_limits.py  test_reward_tilt.py  test_smoke.py
tests/integration/: test_train_one_step.py
tests/qm9/: conftest.py  test_edm_injection.py  test_normalization.py
tests/results/: compute_results.py
tests/unit/: test_data.py  test_losses.py  test_theory.py
