[project]
name = "tailseeker"
version = "0.1.0"
description = "Tilted score matching for molecular generation (NeurIPS 2026 Workshop)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.2.0",
    "pytorch-lightning>=2.2.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "wandb>=0.16.0",
    "rdkit>=2023.9.1",  # official package (rdkit-pypi is py311-only; rdkit has py312 wheels)
    "torch-geometric>=2.5.0",
    "pyyaml>=6.0.1",
    "dotmap>=1.3.30",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    # EDM (ehoogeboom/e3_diffusion_for_molecules) runtime requirements
    "scipy>=1.12.0",    # qm9/analyze.py uses scipy.stats for molecule metrics
    "imageio>=2.34.0",  # EDM visualization / molecule image generation
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
tailseeker-setup = "tailseeker.bins:setup"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
